fix(ui): fix collapsible animation flickering

--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -123,8 +123,8 @@ ul {
   --font-logo: "Queensides", "sans-serif";
   --color-accent-green: var(--chart-2);
   --color-offwhite: oklch(0.985 0 0);
-  --animate-expand: expand 250ms ease-in-out 50ms forwards;
-  --animate-collapse: collapse 200ms ease-in-out 50ms forwards;
+  --animate-expand: expand 250ms ease-in-out 50ms backwards;
+  --animate-collapse: collapse 200ms ease-in-out 50ms backwards;
   --spacing-collapsible: var(--radix-collapsible-content-width);
 
   @keyframes expand {
